<resources>
    <string name="app_name">Brunch</string>
    <string name="upload_image">Upload Image</string>
    <string name="compress_image">Compress</string>
    <string name="save_image">Save</string>
    <string name="share_image">Share</string>
    <string name="quality_input">Quality: 50</string>
    <string name="OpenDrawer">Open navigation drawer</string>
    <string name="CloseDrawer">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_size">Image Size:-</string>
    <string name="quality_range_slider">Quality Range Slider</string>
    <string name="linkedInUrl">https://www.linkedin.com/in/luckykandpal/</string>
    <string name="selected_image_preview">selected Image Preview</string>
    <string name="app_ad_id">ca-app-pub-8949168206994239~8213816416</string>
    <string name="banner_ad_unit">ca-app-pub-8949168206994239/8978187459</string>
    <string name="privacy_policy">
        Privacy Policy for Brunch

This Privacy Policy describes how our Brunch App (the "App") collects, uses, and discloses information about you.

Information Collection and Use

The App does not collect any personal information about you. You do not need to sign up or log in to use the App, and we do not collect any information about your use of the App.

The App compresses images that you select on your device. The compressed images are stored on your device, and we do not access, collect, or store any information about the images or their contents.

Information Sharing

We do not share any information about you or your use of the App with any third parties.

Security

We take reasonable measures to protect the security of the information that you provide to us. However, no method of transmission over the Internet or method of electronic storage is 100% secure. Therefore, we cannot guarantee the absolute security of your information.

Changes to this Privacy Policy

We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page. You are advised to review this Privacy Policy periodically for any changes. Changes to this Privacy Policy are effective when they are posted on this page.

Contact Us

If you have any questions about this Privacy Policy, please contact us.

    </string>
    <string name="about_us">
        About Us

Welcome to our image compressor tool (Brunch)! My name is Lucky, and I am the creator of this app.

I built this tool as a personal project to learn more about app development and to have some fun along the way. I have always been interested in technology and programming, and this project was a great opportunity for me to explore these passions.

Our image compressor tool is designed to be simple and easy to use. It allows you to compress images on your device quickly and efficiently, without the need for any complicated settings or configurations.

We are committed to providing a high-quality app that meets the needs of our users. We are constantly working to improve our tool and add new features, so please feel free to share your feedback with us.

Thank you for choosing our image compressor tool. We hope you enjoy using it as much as we enjoyed building it!

    </string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="selected_image_size">"Current Image Size :-  "</string>
    <string name="selected_quality">"Selected Quality :-  "</string>
    <string name="compressed_image_preview">Compressed Image Preview</string>
    <string name="selected_quality_50">Selected Quality :- 50%</string>
    <string name="drawer_header_logo_content_description">Drawer Header Logo</string>
    <string name="watermark_first_text">👋 Compress Image Upto</string>
    <string name="watermark_second_text">95 Percent</string>
    <string name="splash_screen_logo">splash screen Logo</string>
    <string name="share_button_text">Share</string>
    <string name="save_button_text">Save</string>
    <string name="new_upload_button_text">New Upload</string>
</resources>
