<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/selectedImageFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".SelectedImage">

    <androidx.cardview.widget.CardView
        android:id="@+id/selectedImageCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedImageFragment"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:orientation="vertical">

            <ImageView
                android:id="@+id/selectedImage"

                android:layout_width="match_parent"

                android:layout_height="200dp"
                android:contentDescription="@string/selected_image_preview"
                android:paddingHorizontal="10dp"
                android:paddingVertical="20dp"
                android:src="@mipmap/app_logo_foreground" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerColor="@color/selectedImageDivider" />

            <TextView
                android:id="@+id/selectedImageSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/image_size"
                android:textStyle="bold" />

            <com.google.android.material.slider.Slider
                android:id="@+id/qualityRange"
                style="@style/sliderStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/quality_range_slider"
                android:stepSize="1"
                android:value="50.0"
                android:valueFrom="0"
                android:valueTo="95.0"
                app:thumbColor="@color/compressButtonColor"
                app:trackColorActive="@color/compressButtonColor"
                app:trackHeight="10dp" />

            <TextView
                android:id="@+id/selectedQualityValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/selected_quality_50"
                android:textColor="@color/dayActionBarColor"
                android:textStyle="bold" />

            <Button
                android:id="@+id/compressBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:backgroundTint="@color/compressButtonColor"
                android:text="@string/compress_image"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/compressedImageCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedImageCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/compressedImageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/compressed_image_preview"
                android:paddingHorizontal="10dp"
                android:paddingVertical="20dp"
                android:src="@mipmap/app_logo_foreground" />


            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerColor="@color/selectedImageDivider" />

            <TextView
                android:id="@+id/compressedImageSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/image_size"
                android:textStyle="bold"

                app:layout_constraintTop_toBottomOf="@+id/divider" />


            <Button

                android:id="@+id/saveCompressImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:backgroundTint="@color/compressButtonColor"
                android:drawableEnd="@drawable/baseline_save_24"
                android:text="@string/save_button_text"
                android:textStyle="bold"

                />
            <Button
                android:layout_marginTop="10dp"

                android:id="@+id/shareCompressedBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/compressButtonColor"
                android:drawableEnd="@drawable/baseline_share_24"
                android:text="@string/share_button_text"
                android:textStyle="bold"
                android:visibility="gone"

                />



            <!--                app:layout_constraintEnd_toEndOf="@+id/divider"-->

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"
                app:layout_constraintTop_toBottomOf="@+id/shareImageBtn"

                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>